<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_weekly_planner"
        android:icon="@drawable/ic_calendar"
        android:title="@string/weekly_planner"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
